# MinGW-w64-build-scripts

./: .gitignore  Makefile.am  README.md  configure.ac
scripts/: cloog.sh  expat.sh  gmp.sh  isl.sh  libiconv.sh  licenses.sh  make.sh  mpc.sh  mpfr.sh  ppl.sh  updatesources.sh  versions.sh  winpthreads.sh  winpthreads32multi.sh  winpthreads64multi.sh
target-scripts/: buildlinux64mingw32.sh  buildlinux64mingw64.sh
